# layout_editor

./: CMakeLists.txt
resources/: CMakeLists.txt  resources.rc
src/: box_dialog.cpp  box_dialog.h  box_editor_panel.cpp  box_editor_panel.h  clipboard.cpp  clipboard.h  editor.cpp  editor.h  editor_evt.cpp  image_panel.cpp  image_panel.h  layout_options_dialog.cpp  layout_options_dialog.h  main.cpp  move_page_dialog.cpp  move_page_dialog.h  output_dialog.cpp  output_dialog.h  page_ctl.cpp  page_ctl.h  pdf_to_image.cpp  pdf_to_image.h  resources.h  text_dialog.h  variable_table_model.h  wxformat.h  wxintl.h
